--- a/whr/store/static/css/my.css
+++ b/whr/store/static/css/my.css
@@ -1,2 +1,21 @@
-body{
-background-color:black}
+.linkarea{
+height:90vh;
+}
+.maincontainer{
+padding-left:30px;
+padding-right:30px;
+}
+.logo{
+text-align:right;
+}
+.user{
+float:right;
+padding-right:30px;
+}
+.loginform{
+padding-left:30px;
+padding-right:30px;
+}
+.miniature{
+width:45px;
+}
