--- a/whr/store/templates/store/Menu/SpravMenu.html
+++ b/whr/store/templates/store/Menu/SpravMenu.html
@@ -10,7 +10,7 @@
     <h5 class="card-title">Единицы измерения</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление единиц изменения</p>
-    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'UnitList' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 </div>
