--- a/whr/store/templates/store/Menu/SpravMenu.html
+++ b/whr/store/templates/store/Menu/SpravMenu.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="col-md-3">
-    <div class="card shadow" style="width: 18rem;">
+    <div class="card shadow mb-4" style="width: 18rem;">
     <div class="card-body">
     <h5 class="card-title">Категории</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
@@ -29,6 +29,19 @@
 <div class="col-md-3">
     <div class="card shadow" style="width: 18rem;">
     <div class="card-body">
+    <h5 class="card-title">Поставщики</h5>
+     <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
+    <p class="card-text">Создание,редактирование, удаление поставщиков</p>
+    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    </div>
+    </div>
+</div>
+
+
+
+<div class="col-md-3">
+    <div class="card shadow" style="width: 18rem;">
+    <div class="card-body">
     <h5 class="card-title">Номенклатура</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление  номенклатуры</p>
@@ -37,8 +50,9 @@
     </div>
 </div>
 
- <div class="col-md-3">
-    <div class="card shadow" style="width: 18rem;">
+
+ <div class="col-md-3 ">
+    <div class="card shadow mr-3" style="width: 18rem;">
     <div class="card-body">
     <h5 class="card-title">Подразделения</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
@@ -48,9 +62,9 @@
     </div>
 </div>
 
-</div>
 
-<div class="row mt-4">
+
+
 
 <div class="col-md-3">
     <div class="card shadow" style="width: 18rem;">
@@ -72,9 +86,20 @@
     <a href="#" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
+
+
 </div>
 
-
+<div class="col-md-3">
+    <div class="card shadow" style="width: 18rem;">
+    <div class="card-body">
+    <h5 class="card-title">Списание</h5>
+     <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
+    <p class="card-text">Создание,редактирование, удаление причин списания </p>
+    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    </div>
+    </div>
+</div>
 
 
 
