Первый справочник полностью

--- a/whr/store/static/css/my.css
+++ b/whr/store/static/css/my.css
@@ -28,9 +28,12 @@ text-decoration:none;
 .scrolltable{
 display:block;
 overflow-y: auto;
-height:70vh;
+height:75vh;
 }
 
 .miniature_sprav{
-width:25px;
+width:45px;
+float:left;
+
+
 }
