--- a/whr/store/templates/store/spr/UnitDelete.html
+++ b/whr/store/templates/store/spr/UnitDelete.html
@@ -15,7 +15,7 @@
 <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p}}</th>
-<th class="pt-4"> <button type="submit" class="btn btn-primary btn btn-sm mb-3 pt-2 pb-2 " >Изменить</button>
+<th class="pt-4"> <button type="submit" class="btn btn-danger btn btn-sm mb-3 pt-2 pb-2 " >Удалить</button>
        <a href="{% url 'UnitList' %}" class="btn btn-secondary btn btn-sm mb-3 pt-2 pb-2" >X<a>
 </form>
 </th>
