--- a/whr/store/templates/store/Menu/SpravMenu.html
+++ b/whr/store/templates/store/Menu/SpravMenu.html
@@ -1,7 +1,7 @@
 {% extends 'store/menu.html' %}
 {% load static %}
 {% block DataArea %}
-<h4 class=" mb-4"> <img src="{% static '/images/report.png' %}" class="miniature"> Справочники</h4>
+<h4 class=" mb-4 mt-1"> <img src="{% static '/images/report.png' %}" class="miniature"> Справочники</h4>
 <div class="row ">
 
 <div class="col-md-3">
@@ -21,7 +21,7 @@
     <h5 class="card-title">Категории</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление категорий ТМЦ</p>
-    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'CategoryList' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 </div>
@@ -32,7 +32,7 @@
     <h5 class="card-title">Поставщики</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление поставщиков</p>
-    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'PostavList' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 </div>
@@ -45,7 +45,7 @@
     <h5 class="card-title">Номенклатура</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление  номенклатуры</p>
-    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'NomList' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 </div>
@@ -57,7 +57,7 @@
     <h5 class="card-title">Подразделения</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление  подразделений</p>
-    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'PodrazList' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 </div>
@@ -72,7 +72,7 @@
     <h5 class="card-title">Подотчетные лица</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление подотчетных лиц</p>
-    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'FioList' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 </div>
@@ -83,7 +83,7 @@
     <h5 class="card-title">Объекты</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление объектов </p>
-    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'ObctList' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 
@@ -96,7 +96,7 @@
     <h5 class="card-title">Списание</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление причин списания </p>
-    <a href="#" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'SpisList' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 </div>
