--- a/whr/store/templates/store/spr/SprList.html
+++ b/whr/store/templates/store/spr/SprList.html
@@ -1,22 +1,19 @@
 {% extends 'store/menu.html' %}
 {% load static %}
 {% block DataArea %}
-
 <div class="row">
-    <div class="col-md-1  "><img src="{% static '/images/report.png' %}" class="miniature_sprav mt-1 ">Единицы измерения</div>
+    <div class="col-md-1  "><img src="{% static '/images/report.png' %}" class="miniature_sprav mt-1 ">{{pic_label}}</div>
 <div class="col-md-11 mx-auto shadow">
 <table class="table  shadow ">
-
  <thead>
-
     <tr>
-
-      <th >
+      <th class="{{brd_class}}" >
 <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p}}</th>
-<th class="pt-4"> <button type="submit" class="btn btn-primary btn btn-sm mb-3 pt-2 pb-2 " >Изменить</button>
-       <a href="{% url 'UnitList' %}" class="btn btn-secondary btn btn-sm mb-3 pt-2 pb-2" >X<a>
+<th class="pt-4 {{brd_class}}"> <button type="submit" class="btn {{btn_class}} btn btn-sm mb-3 pt-2 pb-2 " >{{btn_caption}}</button>
+       <a href="{% url base_url %}" ><img src="{% static '/images/update.png' %}" class="btnupdate"><a>
+
 </form>
 </th>
     </tr>
@@ -28,12 +25,11 @@
     {% for item in unit %}
 <tr>
 <td style="width:960px;">
-<a href="{% url 'UnitUpdate' item.pk %}" class=" text-dark  ">{{item.title}}</a>
+<a href="{% url update_url item.pk %}" class=" text-dark  ">{{item.title}}</a>
 </td>
 <td class="text-center">
-    <a href="{% url 'UnitDelete' item.pk %}" class="lead text-dark  ">
+    <a href="{% url delete_url item.pk %}" class="lead text-dark  ">
     <img src="{% static '/images/del.png' %}" class="miniature2"></td></a>
-
 </tr>
 {% endfor %}
 </tbody>
@@ -41,12 +37,4 @@
 </div>
 </div>
 </div>
-
-
-
-
-
-
-
-
 {% endblock DataArea %}
