Первая форма с ajax

--- a/whr/store/templates/store/menu.html
+++ b/whr/store/templates/store/menu.html
@@ -4,10 +4,10 @@
 {% block LinkArea %}
 {% if request.user.username == "Кладовщик" %}
 
-<a href="{% url 'DocMenu' %}" class="btn btn-light border border-white  nav-link mb-2 shadow  ">Документы</a>
+<a href="{% url 'DocMenu' %}" class="btn btn-secondary text-white nav-link mb-2 shadow  ">Документы</a>
 
-<a href="{% url 'ReportMenu' %}" class="btn btn-light border border-white  nav-link mb-2 shadow ">Отчеты</a>
-<a href="{% url 'SpravMenu' %}" class="btn btn-light border border-white  nav-link mb-1 shadow ">Справочники</a>
+<a href="{% url 'ReportMenu' %}" class="btn btn-secondary   nav-link mb-2 shadow text-light">Отчеты</a>
+<a href="{% url 'SpravMenu' %}" class="btn btn-secondary text-white  nav-link mb-1 shadow ">Справочники</a>
 
 {% else %}
  <a href="#" class="btn btn-light border border-white  nav-link mb-2 shadow ">Отчеты</a>
