--- a/whr/store/templates/store/base.html
+++ b/whr/store/templates/store/base.html
@@ -10,6 +10,7 @@
      <link type="text/css" href="{% static '/css/my.css' %}"  rel="stylesheet">
        <link rel="shortcut icon" href="{% static '/images/box.ico' %}" type="image/x-icon">
     <script src="{% static '/js/bootstrap.min.js' %}" ></script>
+     <script src="{% static '/js/jquery.js' %}" ></script>
 </head>
 
 <body>
@@ -48,6 +49,6 @@
     </div>
 </div>
 </div>
-
+{% include 'store/spr/ajax.html' %}
 </body>
 </html>
