--- a/whr/store/templates/store/spr/SprList.html
+++ b/whr/store/templates/store/spr/SprList.html
@@ -3,17 +3,17 @@
 {% block DataArea %}
 
 <div class="row">
-    <div class="col-md-1  "><img src="{% static '/images/report.png' %}" class="miniature_sprav mt-1 ">{{pic_label}}</div>
+    <div class="col-md-1  ">{{pic_label}}</div>
 <div class="col-md-11 mx-auto shadow">
 <table class="table  shadow ">
  <thead>
     <tr>
-      <th class="{{brd_class}}" >
-<form action="" method="post">
+      <th  >
+<form action="" method="post" id="post-form">
         {% csrf_token %}
         {{ form.as_p}}</th>
-<th class="pt-4 {{brd_class}}"> <button type="submit" class="btn {{btn_class}} btn btn-sm mb-3 pt-2 pb-2 " >{{btn_caption}}</button>
-       <a href="{% url base_url %}" ><img src="{% static '/images/update.png' %}" class="btnupdate"><a>
+<th class="pt-4 "> <button type="submit" class="btn  btn btn-sm mb-3 pt-2 pb-2 " id="savebtn">Добавить</button>
+       <a href="{% url 'UnitList' %}" ><img src="{% static '/images/update.png' %}" class="btnupdate"><a>
 
 </form>
 </th>
@@ -22,15 +22,13 @@
 </table>
 <div class="scrolltable">
 <table class="table shadow table-bordered">
-<tbody>
+<tbody id="tbody">
     {% for item in unit %}
 <tr>
-<td style="width:960px;">
-<a href="{% url update_url item.pk %}" class=" text-dark  ">{{item.title}}</a>
-</td>
-<td class="text-center">
-    <a href="{% url delete_url item.pk %}" class="lead text-dark  ">
-    <img src="{% static '/images/del.png' %}" class="miniature2"></td></a>
+<td style="width:960px; " class="align-middle">{{item.title}}</td>
+
+<td class="text-center align-middle" ><input data-sid="{{item.pk}" value="Update" type="image" src="{% static '/images/update.png' %}" width="25px" > </td>
+<td class="text-center align-middle" ><input data-sid="{{item.pk}}" value="Delete" type="image" src="{% static '/images/del.png' %}" width="28px"> </td>
 </tr>
 {% endfor %}
 </tbody>
@@ -38,4 +36,9 @@
 </div>
 </div>
 </div>
+<script>
+     var PictureDeleteUrl="{% static '/images/del.png' %}"
+     var PictureDeleteUrl="{% static '/images/update.png' %}"
+</script>
 {% endblock DataArea %}
+
