--- a/whr/store/templates/store/spr/SprList.html
+++ b/whr/store/templates/store/spr/SprList.html
@@ -7,13 +7,14 @@
 <div class="col-md-11 mx-auto shadow">
 <table class="table  shadow ">
  <thead>
+
     <tr>
       <th  >
-<form action="" method="post" id="post-form">
+<form action=" {% url 'SprSave' %} " method="post" id="post-form">
         {% csrf_token %}
         {{ form.as_p}}</th>
-<th class="pt-4 "> <button type="submit" class="btn  btn btn-sm mb-3 pt-2 pb-2 " id="savebtn">Добавить</button>
-       <a href="{% url 'UnitList' %}" ><img src="{% static '/images/update.png' %}" class="btnupdate"><a>
+<th class="pt-4 "> <button type="submit" class="btn  btn-primary btn-sm mb-3 pt-2 pb-2 " id="savebtn">Добавить</button>
+
 
 </form>
 </th>
