--- a/whr/store/templates/store/base.html
+++ b/whr/store/templates/store/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="private">
     <link type="text/css" href="{% static '/css/bootstrap.css' %}"  rel="stylesheet">
      <link type="text/css" href="{% static '/css/my.css' %}"  rel="stylesheet">
        <link rel="shortcut icon" href="{% static '/images/box.ico' %}" type="image/x-icon">
