--- a/whr/store/static/css/my.css
+++ b/whr/store/static/css/my.css
@@ -55,5 +55,18 @@ background-color:Silver;
 .linkdiv{
 margin-top:8px;}
 .img_btnsave{
-width:30px;
+width:20px;
 }
+.addbtn{
+width:38px;
+height:38px;
+margin-left:20px;
+}
+.addbtn2{
+width:38px;
+height:38px;
+
+}
+
+table.fixed { table-layout:fixed; }
+table.fixed td { overflow: hidden; }
