--- a/whr/store/templates/store/spr/SprObct.html
+++ b/whr/store/templates/store/spr/SprObct.html
@@ -18,10 +18,12 @@
 <form action={{url_name}} method="post" id="obct-form">
         {% csrf_token %}
      <tr>
-     <td class="pt-3 border"> {{ form.title}}</td>
-     <td class="pt-3 border border-end-0" style="widht:400px;" >{{form.podraz}}</td>
-     <td class="text-start border border-start-0" style="padding-left:0;"><a href="#" class="btn btn-secondary btn-sm mt-2 " style="height:36px;margin-left:5px;" >+</a></td>
-    <th class="pt-3 text-center"> <button type="submit" class="btn  btn-primary btn-sm mb-0 pt-2 pb-2 mt-0 " id="savebtn"><img class="img_btnsave" src="{% static '/images/check2.png' %}" ></button></td>
+     <td class="pt-2 border"> {{ form.title}}</td>
+     <td class="pt-2 border border-end-0" style="widht:400px;" >{{form.podraz}}</td>
+     <td class="text-start border border-start-0 pt-2 ml-2 " style="padding-left:0;"><button type="button" class="btn btn-secondary btn-sm  addbtn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  +
+</button></td>
+    <th class="pt-2 text-center"> <button type="submit" class="btn  btn-primary btn-sm    addbtn " id="savebtn" ><img class="img_btnsave" src="{% static '/images/check2.png' %}" title="Добавить/Сохранить" ></button></td>
 
     </tr>
 
@@ -33,13 +35,13 @@
 
 </table>
 <div class="scrolltable">
-<table class="table shadow table-bordered table-hover" id="data-table">
+<table class="table shadow table-bordered table-hover fixed" id="data-table">
 <tbody id="tbody">
     {% for item in unit %}
 <tr>
-<td style="width:810px; " class="align-middle">{{item.title}}</td>
-<td style="width:940px; " class="align-middle">{{item.podraz.title}}</td>
-<td class="text-center align-middle" style="width:65px;"><input data-sid="{{item.pk}}"  value="Update" type="image" src="{% static '/images/update.png' %}" width="25px" > </td>
+<td style="width:472px; " class="align-middle">{{item.title}}</td>
+<td style="width:553px; " class="align-middle">{{item.podraz.title}}</td>
+<td class="text-center align-middle" style="width:50px;"><input data-sid="{{item.pk}}"  value="Update" type="image" src="{% static '/images/update.png' %}" width="25px" > </td>
 <td class="text-center align-middle" ><input data-sid="{{item.pk}}" data-del="{{url_delete}}" class="btn-del " value="Delete" type="image" src="{% static '/images/del.png' %}" width="28px"> </td>
 </tr>
 {% endfor %}
@@ -49,5 +51,27 @@
 </div>
 </div>
 
+
+<!-- Модальное окно -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog ">
+    <div class="modal-content ">
+      <div class="modal-header ">
+        <h5 class="modal-title " id="exampleModalLabel"><span >Добавление подразделения</span></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+      </div>
+      <div class="modal-body">
+          <form id="add-podraz" action="{{url_name2}}" method="post">
+{% csrf_token %}
+{{form2.as_p}}
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class=" btn btn-primary" data-bs-dismiss="modal" id="savebtn2" >Сохранить</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+  </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock DataArea %}
 
