--- a/whr/store/templates/store/Menu/SpravMenu.html
+++ b/whr/store/templates/store/Menu/SpravMenu.html
@@ -45,7 +45,7 @@
     <h5 class="card-title">Номенклатура</h5>
      <img class="card-img-top miniature" src="{% static '/images/report.png' %}" >
     <p class="card-text">Создание,редактирование, удаление  номенклатуры</p>
-    <a href="{% url 'NomList' %}" class="btn btn-primary">Открыть справочник</a>
+    <a href="{% url 'SprNom' %}" class="btn btn-primary">Открыть справочник</a>
     </div>
     </div>
 </div>
