--- a/whr/store/templates/store/spr/SprList.html
+++ b/whr/store/templates/store/spr/SprList.html
@@ -14,7 +14,7 @@
     <input type="hidden" name="unit_id " id="unit_id">
         {{ form.as_p}}</th>
 
-<th class="pt-4 "> <button type="submit" class="btn  btn-primary btn-sm mb-3 pt-2 pb-2 " id="savebtn"><img class="img_btnsave" src="{% static '/images/check2.png' %}" ></button>
+<th class="pt-4 "> <button type="submit" class="btn  btn-primary btn-sm mb-3 pt-2 pb-2 " id="savebtn">Сохранить</button>
 
 
 </form>
