--- a/whr/store/templates/store/spr/SprNom.html
+++ b/whr/store/templates/store/spr/SprNom.html
@@ -20,6 +20,7 @@
 <form  method="post" id="nom-form">
  {% csrf_token %}
     <input type="hidden" name="unit_id " id="unit_id">
+
  <tr>
      <td class="pt-2 border"> {{ form.title}}</td>
      <td class="pt-2 border border-end-0" style="widht:400px;" >{{form.izm}}</td>
@@ -27,7 +28,7 @@
      <td class="pt-2 border border-end-0" style="widht:400px;" >{{form.category}}</td>
      <td class="text-start border border-start-0 pt-2 ml-2 " style="padding-left:0;"><button type="button" class="btn btn-secondary btn-sm  addbtn" data-bs-toggle="modal" data-bs-target="#exampleModal">+</button></td>
      <td class="pt-2 border " style="widht:80px;" >{{form.srok}}</td>
-     <td class="pt-2 text-center" style="widht:100px;"> <button type="submit" class="btn  btn-primary btn-sm    addbtn " id="nomsavebtn" ><img class="img_btnsave" src="{% static '/images/check2.png' %}" title="Добавить/Сохранить" ></button></td>
+     <td class="pt-2 text-center" style="widht:100px;"> <button type="submit" class="btn  btn-primary btn-sm pt-2 pb-2    " id="nomsavebtn" >Сохранить</button></td>
  </tr>
 </form>
 
@@ -36,17 +37,17 @@
 
 
 </table>
-<div class="scrolltable">
+<div class="scrolltable2">
 <table class="table shadow table-bordered table-hover fixed" id="data-table">
 <tbody id="tbody">
     {% for item in unit %}
 <tr>
-<td style="width:400px; " class="align-middle fixed">{{item.title}}</td>
-<td style="width:175px; " class="align-middle fixed">{{item.izm.title}}</td>
- <td style="width:325px; " class="align-middle fixed">{{item.category.title}}</td>
-   <td style="width:50px; " class="align-middle fixed">{{item.srok}}</td>
-<td class="text-center align-middle fixed" style="width:45px;"><input data-sid="#" data-update="#" class="btn-podraz-update " value="Update" type="image" src="{% static '/images/update.png' %}" width="25px" > </td>
-<td class="text-center align-middle fixed" style="width:45px;" ><input data-sid="#" data-del="#" class="btn-del " value="Delete" type="image" src="{% static '/images/del.png' %}" width="28px"> </td>
+<td style="width:420px; " class="align-middle fixed">{{item.title}}</td>
+<td style="width:180px; " class="align-middle fixed">{{item.izm.title}}</td>
+ <td style="width:300px; " class="align-middle fixed">{{item.category.title}}</td>
+   <td style="width:90px; " class="align-middle fixed text-center">{{item.srok}}</td>
+<td class="text-center align-middle fixed" style="width:45px;"><input data-sid="{{item.id}}" data-update="#" class="btn-nom-update " value="Update" type="image" src="{% static '/images/update.png' %}" width="25px" > </td>
+<td class="text-center align-middle fixed" style="width:45px;" ><input data-sid="{{item.id}}" data-del="#" class="btn-nom-delete " value="Delete" type="image" src="{% static '/images/del.png' %}" width="28px"> </td>
 
 </tr>
 {% endfor %}
