--- a/whr/store/templates/store/spr/ajax.html
+++ b/whr/store/templates/store/spr/ajax.html
@@ -72,8 +72,8 @@ success:function(data){
     x=data.unit_data;
     if (data.status=='Save'){
     for(i=0;i<x.length;i++){
-    output +='<tr><td class="align-middle" style="width:458px;">'+x[i].title+'</td>'+
-    '<td class="align-middle" style="width:545px;">'+ x[i].podraz__title+'</td>'+
+    output +='<tr><td class="align-middle fixwed" style="width:460px;">'+x[i].title+'</td>'+
+    '<td class="align-middle fixed" style="width:540px;">'+ x[i].podraz__title+'</td>'+
     '<td class="text-center align-middle" style="width:45px;">'+'<input data-sid='+x[i].id+ '  value="Update" data-update="/ObctUpdate/"  class="btn-podraz-update" type="image" src="../static/images/update.png" style="width:25px;">'+'</td>'
     + '<td class="text-center align-middle" style="width:45px;">'+'<input data-sid='+x[i].id+ ' value="Update" data-del="/ObctDelete/"  class="btn-del" type="image" src="../static/images/del.png" style="width:28px;">'+'</td> </tr>'
 
